[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", features = ["tokio_rt"] }
napi-derive = "2.16.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
futures = "0.3"
